Unify image and video uploads
